--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@types/react-dom": "0.14.18",
     "@types/webpack-env": ">=1.12.1 <1.14.0",
     "react": "15.4.2",
-    "react-container-dimensions": "^1.3.2",
-    "react-d3-treemap": "^1.0.9",
+    "react-container-dimensions": "1.3.2",
+    "react-d3-treemap": "1.0.9",
     "react-dom": "15.4.2",
-    "sp-pnp-js": "^2.0.7"
+    "sp-pnp-js": "2.0.7"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "~1.1.0",
